--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -14,20 +14,6 @@
   width: 100%;
   min-height: $s-32;
   background-color: var(--title-background-color);
-  .title,
-  .title-only {
-    @include tabTitleTipography;
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-    height: 100%;
-    min-height: $s-32;
-    color: var(--title-foreground-color);
-    overflow: hidden;
-  }
-  .title-only {
-    margin-left: $s-8;
-  }
 
   .title-wrapper {
     display: flex;
@@ -108,4 +94,25 @@
       stroke: var(--icon-foreground);
     }
   }
+}
+
+.title,
+.title-only {
+  @include tabTitleTipography;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  height: 100%;
+  min-height: $s-32;
+  color: var(--title-foreground-color);
+  overflow: hidden;
+}
+
+.title-only {
+  --title-bar-title-margin: #{$s-8};
+  margin-inline-start: var(--title-bar-title-margin);
+}
+
+.title-only-icon-gap {
+  --title-bar-title-margin: #{$s-12};
 }
