--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -219,20 +219,19 @@
   .clip-content-input {
     display: none;
   }
-  .clip-content-label {
-    @extend .button-tertiary;
-    height: $s-32;
-    width: $s-28;
-    border-radius: $br-8;
-    .icon {
-      @include flexCenter;
-      svg {
-        @extend .button-icon;
-        stroke: var(--icon-foreground);
-      }
-    }
-    &.selected {
-      @extend .button-icon-selected;
-    }
-  }
+}
+
+.clip-content-label {
+  @extend .button-tertiary;
+  height: $s-32;
+  width: $s-28;
+  border-radius: $br-8;
+}
+
+.selected {
+  @extend .button-icon-selected;
+}
+
+.checkbox-button {
+  @extend .button-icon;
 }
