--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -128,13 +128,14 @@
   border-radius: $br-8;
   height: $s-32;
   width: $s-28;
-  svg {
-    @extend .button-icon;
-    stroke: var(--icon-foreground);
-  }
   &.selected {
     @extend .button-icon-selected;
   }
+}
+
+.lock-ratio-icon {
+  @extend .button-icon;
+  stroke: var(--icon-foreground);
 }
 
 .position {
