--- a/frontend/src/app/main/ui/workspace/sidebar/layers.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layers.scss
@@ -164,10 +164,14 @@
   color: var(--pill-foreground-color);
 }
 
+.layers {
+  position: relative;
+}
+
 .filters-container {
   @extend .menu-dropdown;
-  top: $s-44;
-  left: $s-12;
+  position: absolute;
+  left: $s-20;
   width: $s-192;
   .filter-menu-item {
     @include bodyMedTipography;
