--- a/frontend/src/app/main/ui/dashboard/fonts.scss
+++ b/frontend/src/app/main/ui/dashboard/fonts.scss
@@ -256,40 +256,43 @@
   }
 
   .banner {
+    @include bodyMedTipography;
+    --bg-color: var(--alert-background-color-default);
+    --fg-color: var(--alert-text-foreground-color-default);
+    --icon-color: var(--alert-icon-foreground-color-default);
+    --border-color: var(--alert-border-color-default);
     overflow: hidden;
     display: grid;
-    grid-template-columns: $s-40 1fr;
-
-    background-color: $db-primary;
+    grid-template-columns: $s-16 1fr;
+    gap: $s-8;
+    padding: $s-8 $s-8 $s-8 $s-16;
     border-radius: $br-12;
-    border: $s-1 solid $db-quaternary;
-    color: $df-primary;
+    border: $s-1 solid var(--border-color);
+    border-radius: $br-12;
+    background-color: var(--bg-color);
+    color: var(--fg-color);
     font-size: $fs-12;
 
-    &:not(:last-child) {
-      margin-bottom: $s-12;
-    }
     .icon {
       display: flex;
       align-items: flex-start;
       justify-content: center;
-      padding-top: $s-12;
 
       svg {
-        stroke: $df-secondary;
+        stroke: var(--icon-color);
         fill: none;
-        height: $s-20;
-        width: $s-20;
+        height: $s-16;
+        width: $s-16;
       }
     }
-    .content {
-      margin: $s-12;
-      a {
-        color: $da-primary;
-      }
+    .content a {
+      color: $da-primary;
     }
     &.warning {
-      background-color: $db-quaternary;
+      --bg-color: var(--alert-background-color-warning);
+      --fg-color: var(--alert-text-foreground-color-warning);
+      --icon-color: var(--alert-icon-foreground-color-warning);
+      --border-color: var(--alert-border-color-warning);
       .icon svg {
         stroke: var(--element-foreground-warning);
       }
