--- a/frontend/src/app/main/ui/notifications/toast_notification.scss
+++ b/frontend/src/app/main/ui/notifications/toast_notification.scss
@@ -16,7 +16,7 @@
   top: $s-16;
   right: $s-16;
   display: grid;
-  grid-template-columns: $s-16 auto 1fr auto;
+  grid-template-columns: $s-16 1fr auto;
   gap: $s-8;
   min-height: $s-32;
   min-width: $s-500;
@@ -24,9 +24,13 @@
   padding: $s-8 $s-8 $s-8 $s-16;
   border: $s-1 solid var(--border-color);
   background-color: var(--bg-color);
-  border-radius: $br-12;
+  border-radius: $br-8;
   color: var(--fg-color);
   z-index: $z-index-alert;
+}
+
+.with-links {
+  grid-template-columns: $s-16 auto 1fr auto;
 }
 
 .warning {
