:bug: Fix different button size on webhooks

--- a/frontend/src/app/main/ui/components/forms.scss
+++ b/frontend/src/app/main/ui/components/forms.scss
@@ -257,7 +257,11 @@
 }
 
 // SUBMIT-BUTTON
-.btn-disabled {
+.button-submit {
+  @extend .button-primary;
+}
+
+:disabled {
   @extend .button-disabled;
 }
 
@@ -422,6 +426,7 @@
     fill: none;
   }
 }
+
 //TEXTAREA
 
 .textarea-label {
