--- a/frontend/src/app/main/ui/notifications/context_notification.scss
+++ b/frontend/src/app/main/ui/notifications/context_notification.scss
@@ -7,60 +7,60 @@
 @import "refactor/common-refactor.scss";
 
 .context-notification {
-  --bg-color: var(--alert-background-color-default);
-  --fg-color: var(--alert-text-foreground-color-default);
-  --icon-color: var(--alert-icon-foreground-color-default);
-  --border-color: var(--alert-border-color-default);
+  ---context-notification-bg-color: var(--alert-background-color-default);
+  --context-notification-fg-color: var(--alert-text-foreground-color-default);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-default);
+  --context-notification-border-color: var(--alert-border-color-default);
   display: grid;
   grid-template-columns: $s-16 auto 1fr;
   gap: $s-8;
   min-height: $s-32;
   width: 100%;
   padding: $s-8 $s-8 $s-8 $s-16;
-  border: $s-1 solid var(--border-color);
+  border: $s-1 solid var(--context-notification-border-color);
   border-radius: $br-8;
-  background-color: var(--bg-color);
+  background-color: var(--context-notification-bg-color);
 }
 
 .warning {
-  --bg-color: var(--alert-background-color-warning);
-  --fg-color: var(--alert-text-foreground-color-warning);
-  --icon-color: var(--alert-icon-foreground-color-warning);
-  --border-color: var(--alert-border-color-warning);
+  --context-notification-bg-color: var(--alert-background-color-warning);
+  --context-notification-fg-color: var(--alert-text-foreground-color-warning);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-warning);
+  --context-notification-border-color: var(--alert-border-color-warning);
 }
 
 .success {
-  --bg-color: var(--alert-background-color-success);
-  --fg-color: var(--alert-text-foreground-color-success);
-  --icon-color: var(--alert-icon-foreground-color-success);
-  --border-color: var(--alert-border-color-success);
+  --context-notification-bg-color: var(--alert-background-color-success);
+  --context-notification-fg-color: var(--alert-text-foreground-color-success);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-success);
+  --context-notification-border-color: var(--alert-border-color-success);
 }
 
 .info {
-  --bg-color: var(--alert-background-color-info);
-  --fg-color: var(--alert-text-foreground-color-info);
-  --icon-color: var(--alert-icon-foreground-color-info);
-  --border-color: var(--alert-border-color-info);
+  --context-notification-bg-color: var(--alert-background-color-info);
+  --context-notification-fg-color: var(--alert-text-foreground-color-info);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-info);
+  --context-notification-border-color: var(--alert-border-color-info);
 }
 
 .default {
-  --bg-color: var(--alert-background-color-default);
-  --fg-color: var(--alert-text-foreground-color-default);
-  --icon-color: var(--alert-icon-foreground-color-default);
-  --border-color: var(--alert-border-color-default);
+  --context-notification-bg-color: var(--alert-background-color-default);
+  --context-notification-fg-color: var(--alert-text-foreground-color-default);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-default);
+  --context-notification-border-color: var(--alert-border-color-default);
 }
 
 .error {
-  --bg-color: var(--alert-background-color-error);
-  --fg-color: var(--alert-text-foreground-color-error);
-  --icon-color: var(--alert-icon-foreground-color-error);
-  --border-color: var(--alert-border-color-error);
+  --context-notification-bg-color: var(--alert-background-color-error);
+  --context-notification-fg-color: var(--alert-text-foreground-color-error);
+  --context-notification-icon-color: var(--alert-icon-foreground-color-error);
+  --context-notification-border-color: var(--alert-border-color-error);
 }
 
 .icon {
   @extend .button-icon;
   align-self: self-start;
-  stroke: var(--icon-color);
+  stroke: var(--context-notification-icon-color);
 }
 
 .link-nav {
@@ -72,7 +72,7 @@
 .context-text {
   @include bodyMedTipography;
   align-self: center;
-  color: var(--fg-color);
+  color: var(--context-notification-fg-color);
   margin: auto 0;
 }
 
