--- a/frontend/src/app/main/ui/notifications/inline_notification.scss
+++ b/frontend/src/app/main/ui/notifications/inline_notification.scss
@@ -7,10 +7,10 @@
 @import "refactor/common-refactor.scss";
 
 .inline-notification {
-  --bg-color: var(--alert-background-color-default);
-  --fg-color: var(--alert-text-foreground-color-default);
-  --icon-color: var(--alert-icon-foreground-color-default);
-  --border-color: var(--alert-border-color-default);
+  --inline-notification-bg-color: var(--alert-background-color-default);
+  --inline-notification-fg-color: var(--alert-text-foreground-color-default);
+  --inline-notification-icon-color: var(--alert-icon-foreground-color-default);
+  --inline-notification-border-color: var(--alert-border-color-default);
   @include alertShadow;
   position: absolute;
   top: $s-72;
@@ -24,17 +24,17 @@
   max-width: $s-712;
   padding: $s-8 $s-8 $s-8 $s-16;
   margin-inline: auto;
-  border: $s-1 solid var(--border-color);
+  border: $s-1 solid var(--inline-notification-border-color);
   border-radius: $br-8;
   z-index: $z-index-modal;
-  background-color: var(--bg-color);
-  color: var(--fg-color);
+  background-color: var(--inline-notification-bg-color);
+  color: var(--inline-notification-fg-color);
 }
 
 .icon {
   @extend .button-icon;
   height: 100%;
-  stroke: var(--icon-color);
+  stroke: var(--inline-notification-icon-color);
 }
 
 .inline-text {
