--- a/frontend/src/app/main/ui/components/radio_buttons.scss
+++ b/frontend/src/app/main/ui/components/radio_buttons.scss
@@ -14,6 +14,8 @@
 }
 
 .radio-icon {
+  --radio-icon-border-color: var(--radio-btn-border-color);
+
   @include buttonStyle;
   @include flexCenter;
   @include focusRadio;
@@ -21,6 +23,8 @@
   flex-grow: 1;
   border-radius: $s-8;
   box-sizing: border-box;
+  border: $br-2 solid var(--radio-icon-border-color);
+
   input {
     display: none;
   }
@@ -40,8 +44,9 @@
 }
 
 .checked {
+  --radio-icon-border-color: var(--radio-btn-border-color-selected);
+
   background-color: var(--radio-btn-background-color-selected);
-  border-color: var(--radio-btn-border-color-selected);
   svg {
     stroke: var(--radio-btn-foreground-color-selected);
   }
