--- a/frontend/src/app/main/ui/dashboard/grid.scss
+++ b/frontend/src/app/main/ui/dashboard/grid.scss
@@ -238,20 +238,20 @@ $thumbnail-default-height: $s-168; // Default width
   margin-right: 0;
   margin-top: $s-20;
   width: 100%;
-
-  svg {
-    fill: $df-secondary;
-    margin-right: 0;
-    height: $s-16;
-    width: $s-16;
-  }
+  --menu-icon-color: var(--button-tertiary-foreground-color-rest);
 
   &:hover,
   &:focus {
-    svg {
-      fill: $da-tertiary;
-    }
+    --menu-icon-color: var(--button-tertiary-foreground-color-hover);
   }
+}
+
+.menu-icon {
+  stroke: var(--menu-icon-color);
+  fill: none;
+  margin-right: 0;
+  height: $s-16;
+  width: $s-16;
 }
 
 .project-th-actions.force-display {
