--- a/frontend/src/app/main/ui/dashboard/sidebar.scss
+++ b/frontend/src/app/main/ui/dashboard/sidebar.scss
@@ -355,7 +355,9 @@
   left: $s-16;
   bottom: $s-72;
   min-width: $s-252;
-  // TODO ADD animation fadeInUp
+  :global {
+    animation: fadeInUp 0.2s;
+  }
 }
 
 .profile-dropdown-item {
