--- a/frontend/src/app/main/ui/dashboard.scss
+++ b/frontend/src/app/main/ui/dashboard.scss
@@ -20,8 +20,8 @@
 }
 
 .dashboard-content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: $s-64 1fr;
   position: relative;
   grid-row: 1 / span 2;
   padding: $s-16 $s-16 0 0;
