:recycle: Unnest scss of dashboard comments file

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -156,6 +156,7 @@
   --icon-foreground-accept: var(--status-color-success-500);
   --icon-foreground-discard: var(--status-color-error-500);
   --icon-foreground-active: var(--color-accent-primary);
+  --icon-foreground-selected: var(--color-accent-tertiary);
 
   // INPUTS, SELECTS, DROPDOWNS
 
