:bug: Fix allow entering invalid emails into the invitation form

--- a/frontend/src/app/main/ui/components/forms.scss
+++ b/frontend/src/app/main/ui/components/forms.scss
@@ -293,6 +293,13 @@
       outline: none;
       border: $s-1 solid var(--input-border-color-focus);
     }
+    &.invalid {
+      border: $s-1 solid var(--input-border-color-error);
+      &:hover,
+      &:focus {
+        border: $s-1 solid var(--input-border-color-error);
+      }
+    }
   }
   label {
     display: none;
