--- a/frontend/src/app/main/ui/comments.scss
+++ b/frontend/src/app/main/ui/comments.scss
@@ -138,6 +138,7 @@
   width: $s-284;
   padding: $s-12;
   border-radius: $br-8;
+  border: $s-2 solid var(--modal-border-color);
   background-color: var(--comment-modal-background-color);
   .comments {
     display: flex;
