:bug: Fix search icon on dhasboard

--- a/frontend/resources/styles/common/refactor/common-dashboard.scss
+++ b/frontend/resources/styles/common/refactor/common-dashboard.scss
@@ -95,12 +95,14 @@
     cursor: pointer;
 
     svg {
-      fill: $df-secondary;
+      stroke: $df-secondary;
+      fill: none;
       width: $s-16;
       height: $s-16;
 
       &:hover {
-        fill: $da-tertiary;
+        stroke: $da-tertiary;
+        fill: none;
       }
     }
   }
