--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -315,7 +315,13 @@
   --modal-navigator-foreground-color-rest: var(--color-background-quaternary);
   --modal-navigator-foreground-color-active: var(--color-accent-primary);
 
-  // ALERTS NOTIFICATION TOAST & STATUS WIDGET
+  // ALERTS, NOTIFICATION, TOAST & BADGES
+
+  --alert-background-color-default: var(--color-background-primary);
+  --alert-text-foreground-color-default: var(--color-foreground-primary);
+  --alert-icon-foreground-color-default: var(--color-foreground-primary);
+  --alert-border-color-default: var(--color-background-quaternary);
+
   --alert-background-color-success: var(--color-success-background);
   --alert-text-foreground-color-success: var(--color-foreground-primary);
   --alert-icon-foreground-color-success: var(--color-success-foreground);
@@ -336,26 +342,20 @@
   --alert-icon-foreground-color-info: var(--color-info-foreground);
   --alert-border-color-info: var(--color-info-foreground);
 
-  --alert-background-color-default: var(--color-background-primary);
-  --alert-text-foreground-color-default: var(--color-foreground-primary);
-  --alert-icon-foreground-color-default: var(--color-foreground-primary);
-  --alert-border-color-default: var(--color-background-quaternary);
+  --alert-text-foreground-color-focus: var(--color-accent-primary);
+  --alert-border-color-focus: var(--color-accent-primary);
 
-  --notification-background-color-success: var();
-  --notification-foreground-color-success: var();
-  --notification-border-color-success: var();
   --notification-foreground-color-default: var(--color-foreground-secondary);
 
+  --element-foreground-warning: var(--status-color-warning-500);
+  --element-foreground-error: var(--status-color-error-500);
+
+  // STATUS WIDGET
   --status-widget-background-color-success: var(--status-color-success-500);
   --status-widget-background-color-warning: var(--status-color-warning-500);
   --status-widget-background-color-pending: var(--status-color-pending-500);
   --status-widget-background-color-error: var(--status-color-error-500);
-  --status-widget-icon-foreground-color: var(--color-background-primary); // TODO review
-
-  --element-foreground-success: var(--status-color-success-500);
-  --element-foreground-warning: var(--status-color-warning-500);
-  --element-foreground-pending: var(--status-color-info-500);
-  --element-foreground-error: var(--status-color-error-500);
+  --status-widget-icon-foreground-color: var(--color-background-primary);
 
   // INTERFACE ELEMENTS
   --search-bar-background-color: var(--color-background-primary);
@@ -370,9 +370,6 @@
   --pill-background-color: var(--color-background-tertiary);
   --pill-foreground-color: var(--color-foreground-primary);
 
-  --tag-background-color: var(--color-accent-primary);
-  --tag-background-color-disabled: var(--color-foreground-primary);
-
   --link-foreground-color: var(--color-accent-primary);
 
   --resize-area-background-color: var(--color-background-primary);
@@ -382,6 +379,7 @@
   --dashboard-list-background-color: var(--color-background-tertiary);
   --dashboard-list-foreground-color: var(--color-foreground-primary);
   --dashboard-list-text-foreground-color: var(--color-foreground-secondary);
+
   --flow-tag-background-color: var(--color-background-tertiary);
   --flow-tag-foreground-color: var(--color-foreground-secondary);
   --flow-tag-background-color-hover: var(--color-background-quaternary);
