--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -19,7 +19,7 @@
 .title,
 .title-only,
 .inspect-title {
-  @include uppercaseTitleTipography;
+  @include headlineSmallTypography;
   display: grid;
   align-items: center;
   justify-content: flex-start;
